@@ -1323,11 +1323,6 @@ int main(int argc, char *argv[])
     gm_audio_update_device(&audio_device);
     // disabling this line seems to help with hangs on startup when using pulseaudio
     //gm_audio_get_volume(&audio_device);
-    if (softvol || audio_device.type == AUDIO_TYPE_SOFTVOL) {
-        gm_audio_set_server_volume_update_callback(&audio_device, NULL);
-    } else {
-        gm_audio_set_server_volume_update_callback(&audio_device, set_volume);
-    }
     set_media_player_attributes(media);
 
     if (!softvol) {
@@ -1401,6 +1396,7 @@ int main(int argc, char *argv[])
     safe_to_save_default_playlist = TRUE;
 
     // put the request to update the volume into the list of tasks to complete
+    g_idle_add(hookup_volume, NULL);
     g_idle_add(set_volume, NULL);
     gtk_main();
 
