@@ -1,4 +1,5 @@
 Development
+    Fix some problems on initial volume setup, when pulseaudio device query is slow
     Don't monitor system volume, when running in softvol mode
 	Update metadata in database as needed
 	Don't reset unchanged values in the database
